--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
           <!-- Brand -->
           <a class="navbar-brand waves-effect" href="./Main Page.html" target="_blank">
-              <strong class="blue-text">Ayesha Art Gallery</strong>
+              <strong class="blue-text">MailChimp API Integration</strong>
           </a>
 
           <!-- Collapse -->
@@ -153,7 +153,7 @@
                     </div>
                     <div class="text-center">
                       <button type="submit" name="submit" class="btn btn-light-blue">Submit</button>
-                    </div>
+                    </div> 
                   </form>
                   <!-- Header -->
                   
